[gd_scene load_steps=3 format=3 uid="uid://bpihfiaomkp7f"]

[ext_resource type="Script" path="res://game_objects/Interface/ShipInfoWIndow/ShipInfoWindow.gd" id="1_eh1xd"]

[sub_resource type="LabelSettings" id="LabelSettings_6w778"]

[node name="ShipInfoWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eh1xd")

[node name="BackgroundBlocker" type="Button" parent="."]
modulate = Color(0, 0, 0, 0.509804)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 199.0
offset_right = 531.0
offset_bottom = 441.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ActionPointsLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_6w778")
autowrap_mode = 3

[node name="ComponentsLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InfraBox" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="BackgroundBlocker" to="." method="_on_background_blocker_pressed"]
